tests/bad/21_missing_assignment.src
# Test: Missing assignment operator
void main() {
    int x;
    x 42;  # Missing assignment operator
    return x;
}
